--- a/templates/topic.html
+++ b/templates/topic.html
@@ -45,15 +45,8 @@
         <div id="{{ comment.id }}" class="comment_box">
             <div class="comment">
                 <span class="date">{{ comment.created|timeago }}</span>
-                {% if comment.author %}
-                    <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>
-                {% else %}
-                    <a class="author">anonymous</a>
-                {% endif %}
-                
-                {% if comment.score %}
-                    <span class="score">({{ comment.score }})</span>
-                {% endif %}
+                <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>
+                <span class="points">({{ comment.points }})</span>
                 <div class="body">{{ comment.body|safe }}</div>
                 <a class="reply" href="#">reply</a>
                 <div class="nav">
