--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,17 +1,29 @@
 {% extends "base.html" %}
 
-{% block content %}
-    {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+{% block style %}
+<style>
+    #content {
+        width: 300px;
+    }
+</style>
+{% endblock %}
 
+{% block content %}
+    <h2>Sign In</h2>
+    {% if login_form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
     <form action="/users/login" method="post">
         <table>{{ login_form.as_table }}</table>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Sign in">
     </form>
     
+    <br>
+    <br>
+    
+    <h2>Sign Up</h2>
     <form action="/users/register" method="post">
         <table>{{ registration_form.as_table }}</table>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Sign up">
     </form>    
 {% endblock %}
