--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <a href="/users/login">sign in</a>
             {% endif %}
         </div>
-        <a href="/">H</a>
+        <a href="/">webnodes</a>
     </div>
     <div id="content">
         {% block content %}{% endblock %}
