--- a/templates/reddit_topic.html
+++ b/templates/reddit_topic.html
@@ -43,17 +43,20 @@
 
     {% for comment in comments %}
         <div id="{{ comment.id }}" class="comment_box">
+            
             <div class="comment">
-                <a class="author" href="http://www.reddit.com/user/{{ comment.author }}">{{ comment.author }}</a>
-                <span class="score">({{ comment.score }})</span>
-                
-                <div class="body">{{ comment.body|safe }}</div>
-                <a class="reply" href="#">reply</a>
-                <div class="nav">
-                    <a class="prev" href="#">«</a>
-                    <span class="page_num"></span>
-                    <a class="next" href="#">»</a>
-                    <div style="clear:left"></div>
+                <div class="comment_inner">
+                    <a class="author" href="http://www.reddit.com/user/{{ comment.author }}">{{ comment.author }}</a>
+                    <span class="score">({{ comment.score }})</span>
+
+                    <div class="body">{{ comment.body|safe }}</div>
+                    <a class="reply" href="#">reply</a>
+                    <div class="nav">
+                        <a class="prev" href="#">«</a>
+                        <span class="page_num"></span>
+                        <a class="next" href="#">»</a>
+                        <div style="clear:left"></div>
+                    </div>
                 </div>
             </div>
         </div>
