--- a/templates/topics.html
+++ b/templates/topics.html
@@ -5,7 +5,7 @@
 {% block style %}
     <style>
         #content {
-            width: 800px;
+            width: 1000px;
         }
     
         #sidebar {
@@ -18,21 +18,60 @@
     </style>
 {% endblock %}
 
+{% block script %}
+    <script>
+        function hsv_to_rgb(h, s, v) {
+            // http://nofunc.org/Color_Conversion_Library/
+            var R, G, A, B, C, S=s/255, V=v/255, H=h/255;
+            if(S>0) { 
+                if(H>=1) H=0;
+                H=6*H; F=H-Math.floor(H);
+                A=Math.round(255*V*(1-S));
+                B=Math.round(255*V*(1-(S*F)));
+                C=Math.round(255*V*(1-(S*(1-F))));
+                V=Math.round(255*V); 
+                switch(Math.floor(H)) {
+                    case 0: R=V; G=C; B=A; break;
+                    case 1: R=B; G=V; B=A; break;
+                    case 2: R=A; G=V; B=C; break;
+                    case 3: R=A; G=B; B=V; break;
+                    case 4: R=C; G=A; B=V; break;
+                    case 5: R=V; G=A; B=B; break;
+                }
+                return({r:R?R:0, g:G?G:0, b:B?B:0, a:1});
+            }
+            else return({r:(V=Math.round(V*255)), g:V, b:V, a:1});
+        };
+        rgb = hsv_to_rgb(202,48,191);
+        $(function(){
+            $('a.tag').each(function(){
+                var h = Math.min($(this).text().length * 25, 255);
+                var rgb = hsv_to_rgb(h,48,191);
+                $(this).css('background-color', 
+                'rgb(' + rgb.r + ',' + rgb.g + ',' + rgb.b+ ')');
+            });
+        });
+    </script>
+{% endblock %}
+
+
 {% block content %}
     <div id="sidebar">
         <a href="/topics/new">Start a topic</a>
         <h3>Tags</h3>
         {% for tag in tags %}
-            <a href="/{{ tag.name }}">{{ tag.name }} ({{ tag.count }})</a>
+            <a class="tag" href="/{{ tag.name }}">{{ tag.name }} ({{ tag.count }})</a>
         {% endfor %}
     </div>
 
     {% for topic in topics %}
         <div class="topic">
-            <h2><a href="/topics/{{ topic.id }}">{{ topic.title }}</a></h2>
+            <a class="title" href="/topics/{{ topic.id }}">{{ topic.title }}</a>
+            <p>
             {% for tag_name in topic.tags %}
-                <a href="/{{ tag_name }}">{{ tag_name }}</a>
+                <a class="tag" href="/{{ tag_name }}">{{ tag_name }}</a>
             {% endfor %}
+            </p>
             <p>
                 {{ topic.points }} points, 
                 {{ topic.num_comments }} comments, 
