--- a/templates/topic.html
+++ b/templates/topic.html
@@ -10,6 +10,96 @@
             margin: auto;
             position: relative;
         }
+        
+        .comment_container {
+            position: absolute;
+            display: none;
+            z-index: 1;
+        }
+        
+        .comment {
+            width: 360px;
+            margin: auto;
+        }
+        
+        /* stuff within a comment */
+        .score, .info, .points, .date {
+            color: grey;
+        }
+        
+        .points {
+            float: right;
+            visibility: hidden;
+        }
+        .comment:hover .points {
+            visibility: visible;
+        }
+        
+        .date {
+            float: right;
+        }
+        
+        a.reply {
+            visibility: hidden;
+            text-align: center;
+        }
+        
+        .date {
+            visibility: hidden;
+        }
+        
+        .comment:hover .reply,
+        .comment:hover .date {
+            visibility: visible;
+        }
+        
+        .comment img {
+            max-width: 100%;
+        }
+
+        .comment .body {
+            overflow: auto;
+        }
+
+        .comment_nav {
+            width: 260px;
+            margin: auto;
+        }
+
+        .comment_nav a, 
+        .comment_nav span {
+            float: left;
+            background-color: #59A5D1;
+            color: white;
+            text-align: center;
+            visibility: hidden;
+        }
+        
+        .comment_nav a {
+            width: 80px;
+        }
+        
+        a.prev {
+            -moz-border-radius: 0 0 0 10px;
+        }
+        
+        a.next {
+            -moz-border-radius: 0 0 10px 0;
+        }
+        
+        a.prev:hover,
+        a.next:hover {
+            background-color: #408BB6;
+        }
+        
+        a.prev:active,
+        a.next:active {
+            background-color: #77C4EF;
+        }
+        
+        .comment_nav span {
+            width: 100px;
+        }
     </style>
 {% endblock %}
 
@@ -34,23 +124,26 @@
 {% endblock %}
 
 
+
 {% block content %}
     <noscript>
         <p style="text-align: center">Sorry, this site requires javascript</p>
     </noscript>
 
     {% for comment in comments %}
-        <div id="{{ comment.id }}" class="comment_box">
-            <div class="comment">
-                <div class="comment_inner">
-                    <a class="points">{{ comment.points }}</a>
-                    <div class="body">{{ comment.body|urlify_markdown|markdown }}</div>
-                    <span style="float: right">
-                        <a class="author" href="/users/{{ comment.author }}">{{ comment.author }}</a>,
-                        {{ comment.created|timeago }}
-                    </span>
-                    <a class="reply" style="text-align:center" href="#">reply</a>
-                </div>
+        <div id="{{ comment.id }}" class="comment_container">
+            <div class="comment box">
+                <div class="body">{{ comment.body|urlify_markdown|markdown }}</div>
+                <span style="float: right">
+                    {{ comment.points }} points,
+                    {% if reddit %}
+                        by <a href="http://www.reddit.com/user/{{ comment.author }}">{{ comment.author }}</a>
+                    {% else %}
+                        by <a href="/users/{{ comment.author }}">{{ comment.author }}</a>,
+                    {% endif %}
+                    {{ comment.updated|timeago }}
+                </span>
+                <a class="reply" style="text-align:center" href="#">reply</a>
             </div>
             <div class="comment_nav">
                 <a class="prev" href="#">«</a>
@@ -60,16 +153,14 @@
         </div>
     {% endfor %}
 
-    <div id="reply_box" class="comment_box">
-        <div class="comment">
-            <div class="comment_inner">
-                <form id="reply_form" action="/comments" method="post">
-                    <input type="hidden" id="parent_id" name="parent_id" value="{{ parent_id }}">
-                    <textarea id="reply_textarea" name="body" style="height:200px; width:95%"></textarea>
-                    <input type="submit" style="float:right" value="reply">
-                    <a id="reply_cancel" href="#">cancel</a>
-                </form>
-            </div>
+    <div id="reply_box" class="comment_container">
+        <div class="comment box">
+            <form id="reply_form" action="/comments" method="post">
+                <input type="hidden" id="parent_id" name="parent_id" value="{{ parent_id }}">
+                <textarea id="reply_textarea" name="body" style="height:200px; width:100%"></textarea>
+                <input type="submit" style="float:right" value="reply">
+                <a id="reply_cancel" href="#">cancel</a>
+            </form>
         </div>
     </div>
 {% endblock %}
